fix: further removed scrollbars in GOOGLE CHROME BROWSER (TM) (R) and minor layout sizing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -2,6 +2,14 @@
  * Reset some basic elements
  */
 
+body {
+  scrollbar-width: none;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
